# atlas-clean-code-oktober-2023

Calculator/: CMakeLists.txt  Client.h  main.cpp
Calculator/math/: Calculator.cpp  Calculator.h  CalculatorFactory.h  CalculatorImpl.cpp  CalculatorImpl.h  CalculatorLogger.cpp  CalculatorLogger.h  CalculatorSecure.h
NimGame/: CMakeLists.txt  main.cpp
NimGame/src/: GameClient.h
NimGame/src/games/: AbstractGame.h  Game.h
NimGame/src/games/nimgame/: NimgameImpl.h
NimGame/src/games/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  NimGamePlayer.h
NimGame/src/games/player/: AbstractPlayer.h  Demo.h  DemoImpl.cpp  DemoImpl.h  Player.h
NimGame/src/io/: ConsoleWriter.h  Writer.h
RLValue/: CMakeLists.txt  main.cpp
VectorFillerProjekt/: CMakeLists.txt  main.cpp
VectorFillerProjekt/src/bootstrap/: Bootstrap.h
VectorFillerProjekt/src/client/: VectorClient.h
VectorFillerProjekt/src/client/impl/: VectorClientImpl.h
VectorFillerProjekt/src/collection_utils/: AbstractVectorFactory.h  VectorFactory.h
VectorFillerProjekt/src/collection_utils/impl/decorators/: AbstractVectorFactoryDecorator.h  VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h
VectorFillerProjekt/src/collection_utils/impl/parallel/: VectorFactoryAutoImpl.h  VectorFactoryParallelImpl.h
VectorFillerProjekt/src/collection_utils/impl/sequential/: VectorFactorySequentialImpl.h
VectorFillerProjekt/src/generators/: Generator.h  GeneratorBuilder.h  number_generator.h
VectorFillerProjekt/src/generators/impl/random/: mersenne_twister_number_generator.h  mersenne_twister_number_generator_factory.h
VectorFillerProjekt/src/time/: Stopwatch.h  StopwatchImpl.h
(+2 files in other folders)
